# block-sparse-featurizer-experiments

./: .env.example  .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml
.github/workflows/: test.yml
notebooks/: bsf_workbench.ipynb
src/bsf_experiments/: __init__.py  analysis_phase.py  artifacts.py  backbone_identity.py  cli.py  config.py  data_phase.py  hub_phase.py  hub_release.py  logging_utils.py  model_phase.py  pipeline.py  presets.py  reproduction.py  sessions.py  training_phase.py  types.py  ui.py  visualization_phase.py
tests/: test_artifacts_sessions_visualization.py  test_cli.py  test_config_and_logging.py  test_data_phase.py  test_hub_phase.py  test_hub_release.py  test_model_and_analysis.py  test_pipeline.py  test_pipeline_hub.py  test_presets.py  test_reproduction.py  test_training_phase.py  test_types.py  test_ui_cli.py
tests/integration/: test_dino_gpu.py
